# sentinel-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fastapi_app_example/: README.md  app.py
fastapi_app_example/config/policies/: base.yaml
fastapi_app_example/config/schemas/: order_v1.json
src/config/policies/: base.yaml
src/config/schemas/: order_v1.json
src/sentinel/: __init__.py  logging_utils.py  middleware.py  policy.py  sinks.py  taint.py  validators.py
src/tests/: test_sinks.py  test_validators.py
src/tests/fixtures/: json_schema.json  policy.yaml
